[gd_scene load_steps=10 format=3 uid="uid://bs7w6x7puoynp"]

[ext_resource type="Script" path="res://scenes/edges/fungal_aura.gd" id="1_dkwsu"]
[ext_resource type="Shader" path="res://shaders/shadowstep.gdshader" id="2_oe7nd"]

[sub_resource type="Gradient" id="Gradient_nppj1"]
offsets = PackedFloat32Array(0, 0.724684)
colors = PackedColorArray(0, 0.619608, 0, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kmgo1"]
noise_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bjy4p"]
seamless = true
seamless_blend_skirt = 0.758
bump_strength = 21.4
color_ramp = SubResource("Gradient_nppj1")
noise = SubResource("FastNoiseLite_kmgo1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ked5"]
shader = ExtResource("2_oe7nd")
shader_parameter/density = 1.0
shader_parameter/speed = Vector2(0.02, 0.02)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_bjy4p")

[sub_resource type="Gradient" id="Gradient_b42qa"]
offsets = PackedFloat32Array(0.548851, 0.954023, 1)
colors = PackedColorArray(0.372549, 0.337255, 0.113725, 0.4, 0, 0.411765, 0, 0.380392, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2sev8"]
gradient = SubResource("Gradient_b42qa")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.1)

[sub_resource type="CircleShape2D" id="CircleShape2D_p5spa"]
radius = 110.005

[node name="FungalAura" type="Node2D"]
script = ExtResource("1_dkwsu")
edge_reference = "fungal_aura"

[node name="Aura" type="Sprite2D" parent="."]
z_index = -5
material = SubResource("ShaderMaterial_8ked5")
texture = SubResource("GradientTexture2D_2sev8")

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource("CircleShape2D_p5spa")

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
